# flask-ai-app

./: .env.example  README.md  main.py  pyproject.toml  test.http
app/: __init__.py
app/routes/: text_routes.py
app/services/: text_service.py
