[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "openai>=1.97.0",
    "transformers>=4.53.2",
    "torch>=2.7.1",
    "nltk>=3.9.1",
]
